# ljs_interface

./: Dockerfile  LICENSE  README.md  eureka_entrypoint.sh  requirements.txt
docs/: 01_Basic_demo.md
lib/std_skills/: CHANGELOG.rst  CMakeLists.txt  README.md
src/ljs/: README.md  package.xml  setup.cfg  setup.py
src/ljs/config/: 00-defaults.yml
src/ljs/launch/: ljs.launch.py
src/ljs/ljs/: skill_impl.py  start_skill.py
src/ljs/ljs/ljs_lib/: LJSwrap.py  __init__.py  ljs_driver.py
src/ljs/module/: ljs  ljs_module.yaml
src/ljs_skill_msgs/: CMakeLists.txt  package.xml
src/ljs_skill_msgs/action/: Ljs.action
