<?xml version="1.0"?>
<package format="3">
  <name>ljs_skill_msgs</name>
  <version>1.0.0</version>
  <description>ljs skill definition</description>

  <maintainer email="tech@eurekasystem.it">Eureka System</maintainer>

  <license>Apache License 2.0</license>

  <author>Mattia Gava</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_skills</depend>
  <depend>action_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_archlint</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <skill content-type="json">
      {
        "id": "ljs",
        "description": "{This skill provides an interface for a Keyence scanner,
                          generating two files for each scan: one containing depth data and one containing luminance data.",
        "version": "1.0.0",
        "interface": "action",
        "default_interface_path": "/skill/ljs",
        "datatype": "ljs_skill_msgs/action/Ljs",
        "parameters": {
          "in": [
            {
            "name": "scan_id",
            "type": "string",
            "description": "This parameter uniquely identifies the object to be scanned."
            }
            {
            "name": "face_id",
            "type": "int8",
            "description": "This parameter uniquely identifies the side of the object to be scanned."
            },
        ]
         "out": [
            {
            "name": "result",
            "type": "int64",
            "description": "This parameter represents the result and enables specifying various types of success and failure." },
        ]
        },
        "functional_domains": [
            "perception"
        ]
      }
    </skill>
  </export>
</package>